# simple-api-gateway-poc

./: README.md  makefile  pyproject.toml  settings.yaml
src/: main.py
src/config/: models.py  settings.py
src/handlers/: __init__.py  base.py  custom_handlers.py
